# journey-bot

./: .dockerignore  .editorconfig  .flake8  .gitignore  Cargo.toml  config.example.toml  docker-compose.yaml  docker-compose.yml  dockerfile  flake.nix  loader.sh  pyproject.toml  readme.md  requirements.txt  shell.nix  upgrade.sh
.github/workflows/: build.yaml  build.yml  ci.yaml  ci.yml  lint.yml
JourneyBot/: JourneyBot.py
JourneyBot/Bot/: JourneyBot.py
JourneyBot/Cogs/: Administration.py  AntiSpam.py  BaseCog.py  Basic.py  EnsureRole.py  Feeds.py  Links.py  ModLog.py  Moderation.py  RSS.py  ReactRemove.py  RedditReply.py  Sticky.py  Streams.py
JourneyBot/Database/: DBConnector.py  DBUtils.py
JourneyBot/Util/: Configuration.py  Emoji.py  Logging.py  Reddit.py  Twitch.py  Utils.py  Validation.py
JourneyBot/Views/: Confirm.py  Embed.py  Paginator.py
config/: master.json.example
journey-bot/: Cargo.toml
journey-bot/src/: config.rs  db.rs  emoji.rs  lib.rs  store.rs  utils.rs
journey-bot/src/commands/: anti_spam.rs  auto_role.rs  basic.rs  censor.rs  ensure_role.rs  feeds.rs  guild_config.rs  links.rs  mod.rs  sticky.rs  streams.rs
journey-bot/src/views/: embed.rs  mod.rs  paginator.rs
migrations/journey-bot/: 0_20250326202258_init.py  0_20250403214643_reddit_reply.py  0_20250511174530_yank_reddit_reply.py  0_20250620150107_stream_first_seen.py
prisma/: schema.prisma
prisma/migrations/20240807212456_init/: migration.sql
prisma/migrations/20240927122537_update_anti_spam/: migration.sql
sea-entity/: Cargo.toml
sea-entity/src/: anti_spam_config.rs  auto_role.rs  censor_config.rs  ensured_role.rs  guild_config.rs  known_stream.rs  lib.rs  posted_stream.rs  punished_message.rs  reddit_feed.rs  sea_orm_active_enums.rs  staged_censor_item.rs  sticky_message.rs  stream_observer.rs
sea-migration/: Cargo.toml
sea-migration/src/: lib.rs  m20250826_012513_init.rs  m20251005_135525_cl_staging.rs  m20260121_221856_auto_roles.rs  m20260207_184027_cleanup.rs
