[package]
name = "journey-bot"
version = "0.1.0"
edition = "2024"
default-run = "journey-bot"

[[bin]]
name = "journey-bot"
path = "src/bin/main.rs"

[dependencies]
binary-heap-plus = "0.5.0"
chrono = "0.4.42"
chrono-tz = "0.10.4"
config = { version = "0.15.18", features = ["toml"], default-features = false }
csv = "1.4.0"
cuid2 = "0.1.4"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
poise = { version = "0.6.1", features = [
  "default",
  "handle_panics",
], default-features = false }
rapidfuzz = "0.5.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = [
  "rustls-tls",
], default-features = false }
roux = { version = "2.2.15", features = ["rustls"], default-features = false }
sea-entity = { path = "../sea-entity" }
sea-migration = { path = "../sea-migration" }
sea-orm = { version = "1.1.17", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
tokio-retry2 = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
twitch_api = { version = "0.7.2", features = [
  "client",
  "helix",
  "reqwest",
  "twitch_oauth2",
] }
unicode-normalization = "0.1.24"
