[package]
name = "journey-bot"
version = "0.1.0"
edition = "2024"
default-run = "journey-bot"

[[bin]]
name = "journey-bot"
path = "src/bin/main.rs"

[dependencies]
binary-heap-plus = "0.5.0"
chrono = "0.4.44"
chrono-tz = "0.10.4"
config = { version = "0.15.22", features = ["toml"], default-features = false }
csv = "1.4.0"
cuid2 = "0.1.6"
jsonwebtoken = { version = "10.3.0" }
poise = { version = "0.6.2", features = [
  "default",
  "handle_panics",
], default-features = false }
rapidfuzz = "0.5.0"
regex = "1.12.3"
reqwest = { version = "0.12.28", features = [
  "rustls-tls",
], default-features = false }
roux = { version = "2.2.15", features = ["rustls"], default-features = false }
sea-entity = { path = "../sea-entity" }
sea-migration = { path = "../sea-migration" }
sea-orm = { version = "1.1.20", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.52.1"
tokio-retry2 = { version = "0.9.1", features = ["tracing"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
twitch_api = { version = "0.7.2", features = [
  "client",
  "helix",
  "reqwest",
  "twitch_oauth2",
] }
unicode-normalization = "0.1.25"
